<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".Application_Form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/airplane_icon_white_vector_16057386" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="262dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/visa_management_system"
            android:textAlignment="center"
            android:textColor="@color/White1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showPopup"
            app:srcCompat="@drawable/menu_icon_5" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="711dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:text="@string/visa_application_form"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="Country/Residence"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/date_of_birth"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/purpose_of_visit"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/date_of_travel"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/date_of_issue"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="@dimen/_320dp"
            android:layout_height="@dimen/_51dp"
            android:layout_marginTop="8dp"
            android:background="@color/White1"
            android:hint="@string/date_of_expiry"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/blue"
            android:text="Submit"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_view"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/blue"
            android:text="@string/view_data"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>