<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:fillViewport="true"
    android:scrollbars="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White1"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:background="@color/blue"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/airplane_icon_white_vector_16057386" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="249dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/visa_management_system"
                android:textAlignment="center"
                android:textColor="@color/White1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="showPopup"
                app:srcCompat="@drawable/menu_icon_5" />


        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/Yellow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="337dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:iconifiedByDefault="false"
            app:queryHint="Search here ...">

        </androidx.appcompat.widget.SearchView>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="2dp"
        android:background="@color/Yellow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/available_visa"
            android:textColor="@color/Pure_blue"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="8dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/download" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dateTextAppearance="@color/black"
            android:visibility="visible" />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@color/White1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.175"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="234dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/us_visa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:text="@string/united_states_us"
                    android:textColor="@color/Pure_blue"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="@string/application_deadline"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/apply_now"

                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="110dp"
            android:layout_weight="1"
            android:background="@color/White1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.453"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="256dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/uk_visa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_weight="1"
                    android:text="@string/united_kingdom_uk"
                    android:textColor="@color/Pure_blue"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:text="@string/application_deadline"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="192dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/apply_now"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="320dp"
            android:layout_weight="1"
            android:background="@color/White1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.411"
            tools:ignore="MissingConstraints">


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/canadian_passport_photos" />

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/canada"
                    android:textColor="@color/Pure_blue"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/application_deadline"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="191dp"
                    android:layout_height="27dp"
                    android:layout_marginLeft="80dp"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/apply_now"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginTop="20dp"
            android:background="@color/White1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
